# GenAI-Dev-Onboarding-Starter-Kit

./: 00_intro_to_rag_and_tools.md  GenAI_Dev_Onboarding_Starter_Kit.ipynb  README.md  colab_notebook_guide.md  doc1.txt  doc2.txt  pyproject.toml
my_rag_project/: embedding_processor.py  embedding_processor_langchain.py  evaluation.py  evaluation_langchain.py
