[project]
name = "my-rag-project"
version = "0.1.0"
description = "RAG with Langchain"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
openai = "^1.0.0"
chromadb = "^0.4.0"
ragas = "^0.1.0"
datasets = "^2.0.0"
langchain = "^0.1.0" # Or specific latest version used
langchain-openai = "^0.1.0"
langchain-community = "^0.0.20" # Check versions
langchain-text-splitters = "^0.0.1"

[tool.poetry]
packages = [{include = "my_rag_project", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
