[tool.poetry]
name = "my-rag-project"
version = "0.1.0"
description = "RAG with Langchain"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "my_rag_project", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
openai = "^1.0.0"
chromadb = "^0.4.0"
ragas = "^0.1.6"
datasets = "^2.19.0"
langchain = "^0.1.16"
langchain-openai = "^0.1.5"
langchain-community = "^0.0.36"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
